RESOLVED FIXED168972
[WebRTC] NetworkRTCProvider should stop the network thread from the main thread
https://bugs.webkit.org/show_bug.cgi?id=168972
Summary [WebRTC] NetworkRTCProvider should stop the network thread from the main thread
youenn fablet
Reported 2017-02-28 09:11:29 PST
Libwebrtc expects that and this is guarded by an assertion in Thread::Join()
Attachments
Patch (1.44 KB, patch)
2017-02-28 09:13 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-02-28 09:13:04 PST
youenn fablet
Comment 2 2017-02-28 12:59:52 PST
*** Bug 168982 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2017-02-28 13:04:18 PST
Comment on attachment 302938 [details] Patch Clearing flags on attachment: 302938 Committed r213166: <http://trac.webkit.org/changeset/213166>
WebKit Commit Bot
Comment 4 2017-02-28 13:04:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.