[WebRTC] NetworkRTCProvider should stop the network thread from the main thread https://bugs.webkit.org/show_bug.cgi?id=168972

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-28
Reviewed by Alex Christensen.

* NetworkProcess/webrtc/NetworkRTCProvider.cpp:
(WebKit::NetworkRTCProvider::close): Ensuring to stop the network thread from the main thread when provider is
getting closed.

Canonical link: https://commits.webkit.org/185969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213166 268f45cc-cd09-0410-ab3c-d52691b4dbfc